--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             and see your blog’s impact on sales.
         </h4>
         <form class="signup-form">
-            <input type="email" placeholder="Enter email address">
+            <input type="email" placeholder="Enter email" required>
             <button type="submit">
                 Try it now →
             </button>
@@ -470,18 +470,17 @@
     <div class="try-it text-center">
         <h2>Try Matcha free for 7 days.</h2>
         <form class="signup-form">
-          <input type="email" placeholder="Enter email address">
-          <button>Sign Up Free →</button>
+            <input type="email" placeholder="Enter email address">
+            <button>Sign Up Free →</button>
         </form>
         <p>
-          Start publishing today with a free 7-day trial. <br>
-          <strong>No credit card</strong> required.
+            Start publishing today with a free 7-day trial. <br>
+            <strong>No credit card</strong> required.
         </p>
-      </div>
+    </div>
 </body>
 
-
-
+<script src="./app.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
     crossorigin="anonymous"></script>
